--- a/Specification.html
+++ b/Specification.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -96,50 +96,45 @@
       </ul>
       <ul>
         <li>
-          Rendering and Tools
+          <a href="DeveloperReference.html">Developer Reference</a>
           <ul>
             <li>
-              <a href="ShaderGen.html#ShaderGen">ShaderGen</a>
+              <a href="DeveloperReference.html#DeveloperGuide">Developer Guide</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ShaderGen.html#Viewer">MaterialX Viewer</a>
+              <a href="DeveloperReference.html#ExampleCode">Example Code</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DeveloperReference.html#ExampleFiles">Example MaterialX Files</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DeveloperReference.html#Discussion">Discussion Forum</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DeveloperReference.html#LogoImages">MaterialX Logo Images</a>
             </li>
           </ul>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="DeveloperReference.html">Developer Reference</a>
+          <a href="Tools.html">Rendering and Tools</a>
           <ul>
             <li>
-              <a href="docs/api/index.html">Developer Guide</a>
+              <a href="Tools.html#ShaderGen">ShaderGen</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/source/MaterialXTest">Test Suite Examples</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/python/Scripts">Python Code Examples</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="SampleFiles.html">Example MaterialX Files</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="DiscForum.html">Discussion Forums</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="LogoImages.html">Official Logo Image Files</a>
+              <a href="Tools.html#Viewer">MaterialX Viewer</a>
             </li>
           </ul>
         </li>
@@ -222,9 +217,6 @@
               </li>
               <li class="">
                 <a target="_blank" href="Specification.html">Specification</a>
-              </li>
-              <li class="">
-                <a href="Help.html">Help</a>
               </li>
               <li class="">
                 <a class="blueButton" style="font-size:14px" href="https://github.com/AcademySoftwareFoundation/MaterialX">GitHub</a>
