--- a/Tools.html
+++ b/Tools.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>MaterialX - Discussion Forums</title>
+  <title>MaterialX - ShaderGen and MaterialXView</title>
 
   <link rel="icon" href="faviconMX.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style/rst.css" type="text/css">
@@ -96,50 +96,45 @@
       </ul>
       <ul>
         <li>
-          Rendering and Tools
+          <a href="DeveloperReference.html">Developer Reference</a>
           <ul>
             <li>
-              <a href="ShaderGen.html#ShaderGen">ShaderGen</a>
+              <a href="DeveloperReference.html#DeveloperGuide">Developer Guide</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ShaderGen.html#Viewer">MaterialX Viewer</a>
+              <a href="DeveloperReference.html#ExampleCode">Example Code</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DeveloperReference.html#ExampleFiles">Example MaterialX Files</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DeveloperReference.html#Discussion">Discussion Forum</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DeveloperReference.html#LogoImages">MaterialX Logo Images</a>
             </li>
           </ul>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="DeveloperReference.html">Developer Reference</a>
+          <a href="Tools.html">Rendering and Tools</a>
           <ul>
             <li>
-              <a href="docs/api/index.html">Developer Guide</a>
+              <a href="Tools.html#ShaderGen">ShaderGen</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/source/MaterialXTest">Test Suite Examples</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/python/Scripts">Python Code Examples</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="SampleFiles.html">Example MaterialX Files</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="DiscForum.html">Discussion Forums</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="LogoImages.html">Official Logo Image Files</a>
+              <a href="Tools.html#Viewer">MaterialX Viewer</a>
             </li>
           </ul>
         </li>
@@ -224,9 +219,6 @@
                 <a target="_blank" href="Specification.html">Specification</a>
               </li>
               <li class="">
-                <a href="Help.html">Help</a>
-              </li>
-              <li class="">
                 <a class="blueButton" style="font-size:14px" href="https://github.com/AcademySoftwareFoundation/MaterialX">GitHub</a>
               </li>
               <a class="iconButton" href="https://twitter.com/MaterialXCG" style="float:right">
@@ -239,7 +231,7 @@
 
       <!-- Page Title ---------------------------------------------------------------------- -->
       <div class="clearBoth"></div>
-      <h1 class="articleContentTitle">Discussion Forums</h1>
+      <h1 class="articleContentTitle">Rendering and Tools</h1>
       <div class="clearBoth"></div>
       <hr>
       <!-- --------------------------------------------------------------------------------- -->
@@ -250,25 +242,39 @@
 
           <!-- Page Content -------------------------------------------------------------------- -->
 
-          <h2 id="MtlxSlack"><strong>MaterialX Channel in the ASWF Slack</strong></h2>
+          <h2 id="ShaderGen"><strong>ShaderGen</strong></h2>
           <p>
-            The official and best place to discuss MaterialX is now on the
-            Academy Software Foundation's <strong>#materialx</strong> channel, at
-            <a href="http://academysoftwarefdn.slack.com/">http://academysoftwarefdn.slack.com/</a>.
-            This venue is appropriate for general questions, feature requests, and discussion of the MaterialX Project
-            as a whole.
+            <strong>ShaderGen</strong> is a dynamic shader generation system that can build
+            and compile complete OSL or GLSL shaders from MaterialX nodegraphs.
+            A key component of ShaderGen is a set of
+            <a href="assets/MaterialX.v1.38.PBRSpec.pdf">Physically Based Shading nodes</a>,
+            which can be used in conjunction with
+            Standard Library nodes to create complex layered energy-conserving surface,
+            volume and emissive shaders for offline or realtime/viewport rendering.
           </p>
           <p>
-            To get an invite to join this Slack, please go to
-            <strong><a href="https://slack.aswf.io/">https://slack.aswf.io/</a></strong>.
+            For much more information about ShaderGen components and how ShaderGen works,
+            please see the
+            <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/ShaderGeneration.md">ShaderGeneration</a>
+            page on the MaterialX GitHub.
           </p>
-          <br>
 
-          <h2 id="DiscForum"><strong>MaterialX Forum on Google Groups</strong></h2>
+          <h2 id="Viewer"><strong>MaterialX Viewer</strong></h2>
           <p>
-            The original
-            <a href="https://groups.google.com/forum/#!forum/materialx">MaterialX Discussion Forum on Google Groups</a>
-            is also still available, which may be more suitable for lower-level developer and API questions.
+            Complementing ShaderGen is a simple standalone
+            <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/Viewer.md">Viewer application</a>
+            for MaterialX content.  <strong>MaterialXView</strong> uses ShaderGen with a
+            NanoGUI interface to build
+            GLSL shaders of MaterialX nodegraphs, which can be bound with a selected
+            MaterialX material and applied to geometry defined in .obj format; standard
+            geometries including a sphere, teapot and cutaway shaderball object are included
+            in the distribution, as are a number of example materials based on the
+            <a href="https://github.com/Autodesk/standard-surface/blob/master/reference/standard_surface.mtlx">StandardSurface</a>
+            shader.
+          </p>
+          <p>
+            MaterialX can also be compiled to JavaScript for Web usage. ShaderGen can generate GLSL ES shaders for WebGL rendering. 
+            An example MaterialX Web Viewer is hosted <a href="https://academysoftwarefoundation.github.io/MaterialX/">here</a>  
           </p>
 
           <!-- --------------------------------------------------------------------------------- -->
