Update third-party page for OSD 2022

--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -255,7 +255,7 @@
 
           <h2 id="Houdini"><strong>SideFX Houdini</strong></h2>
           <p>
-            SideFX supports MaterialX in <a href="https://www.sidefx.com/docs/houdini/solaris/materialx.html">Houdini 19.0</a>, including the authoring and exporting of MaterialX graphs through the Solaris framework, and rendering of MaterialX content in Karma CPU/XPU.
+            SideFX supports MaterialX in <a href="https://www.sidefx.com/docs/houdini/solaris/materialx.html">Houdini 19.0</a> and newer, including the authoring and exporting of MaterialX graphs through the Solaris framework, and rendering of MaterialX content in Karma CPU/XPU.
             <br><br>
             <a href="https://www.sidefx.com/tutorials/karma-a-beautiful-game/">Karma, A Beautiful Game</a> by Moeen Sayed provides a useful tutorial on look development in Houdini/Solaris, including an overview of using MaterialX to construct surface and volume materials.
             <br><br>
@@ -264,16 +264,16 @@
 
           <h2 id="Clarisse"><strong>Isotropix Clarisse</strong></h2>
           <p>
-            Isotropix provides early support for MaterialX in <a href="https://www.isotropix.com/products/angie">Clarisse 5.5</a> and the Angie renderer, which may be accessed by the community in a preview build.
+            Isotropix supports MaterialX in <a href="https://www.isotropix.com/products/angie">Clarisse 5.5</a> and the Angie renderer, which may be accessed by the community in a preview build.
             <br><br>
-            Additional details on MaterialX in Clarisse may be found in this <a href="https://www.isotropix.com/learn/tutorials/angie-early-access-lookdeving-with-materialx">tutorial series</a> from Isotropix.
+            Additional details on MaterialX support in Clarisse may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <h2 id="Maya"><strong>Autodesk Maya</strong></h2>
           <p>
-            Autodesk provides early support for MaterialX in Maya through the <a href="https://github.com/Autodesk/maya-usd/blob/dev/doc/MaterialX.md">MayaUSD</a> plug-in, building upon the native support for MaterialX in USD.
+            Autodesk supports MaterialX in Maya through the <a href="https://github.com/Autodesk/maya-usd/blob/dev/doc/MaterialX.md">MayaUSD</a> plug-in, building upon the native support for MaterialX in USD.
             <br><br>
-            Additional details on MaterialX support in Maya may be found in the slides from the MaterialX session at <a href="https://www.materialx.org/assets/ASWF_OSD2021_MaterialX_slides_final.pdf">ASWF Open Source Days 2021</a>.
+            Additional details on MaterialX support in Maya may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <h2 id="RenderMan"><strong>Pixar RenderMan</strong></h2>
@@ -285,9 +285,11 @@
 
           <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
           <p>
-            Autodesk provides early support for MaterialX in <a href="https://docs.arnoldrenderer.com/display/A5NodeRef/materialx/">Arnold 5</a>, allowing MaterialX documents to be referenced and rendered through a custom MaterialX operator.
+            Autodesk provides early support for MaterialX in <a href="https://docs.arnoldrenderer.com/display/A5NodeRef/materialx/">Arnold 5</a> and newer, allowing MaterialX documents to be referenced and rendered through a custom MaterialX operator.
             <br><br>
             MaterialX content can be exported from Arnold implementations in tools such as <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Working+With+MaterialX">Maya</a> and <a href="https://docs.arnoldrenderer.com/display/A5AFCUG/Material+Export">Cinema 4D</a>.
+            <br><br>
+            Additional details on MaterialX support in Arnold may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <!-- --------------------------------------------------------------------------------- -->
