--- a/DeveloperReference.html
+++ b/DeveloperReference.html
@@ -244,44 +244,56 @@
 
           <h2 id="DeveloperGuide"><strong>Developer Guide</strong></h2>
           <p>
-            The <a href="docs/api/index.html">Developer Guide</a> contains an overview for building and installing MaterialX C++ and Python, along with detailed documentation for the <a href="docs/api/annotated.html">MaterialX C++ API</a>.
+            The <a href="docs/api/index.html">Developer Guide</a> contains an overview for building and installing MaterialX C++ and Python,
+            along with detailed documentation for the <a href="docs/api/annotated.html">MaterialX C++ API</a>.
           </p>
 
           <h2 id="ExampleCode"><strong>Example Code</strong></h2>
           <p>
-            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/source/MaterialXTest">MaterialX Unit Tests</a> are a validation suite for the MaterialX C++ libraries, and can provide a useful guide for coding patterns in MaterialX C++.
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/source/MaterialXTest">MaterialX Unit Tests</a>
+            are a validation suite for the MaterialX C++ libraries, and can provide a useful guide for coding patterns in MaterialX C++.
           </p>
           <p>
-            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/python/Scripts">Python Scripts Folder</a> contains a collection of standalone Python scripts that build upon the MaterialX Python API.
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/python/Scripts">Python Code Examples</a>
+            folder contains a collection of standalone Python scripts that build upon the MaterialX Python API.
           </p>
 
           <h2 id="ExampleFiles"><strong>Example MaterialX Files</strong></h2>
           <p>
-            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples">Example Materials</a> folder of the MaterialX distribution provides examples of uniform, procedural, and textured materials based on a variety of shading models:
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples">Example Materials</a>
+            folder of the MaterialX distribution provides examples of uniform, procedural, and textured materials based on a variety of shading
+            models:
           </p>
           <ul>
-            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Standard Surface</a>, a shading model developed by Autodesk.</li>
-            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface</a>, a shading model developed by Pixar.</li>
-            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">glTF PBR</a>, a shading model developed by Khronos.</li>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Standard Surface</a>,
+                 a shading model developed by Autodesk.</li>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface</a>,
+                 a shading model developed by Pixar.</li>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">glTF PBR</a>,
+                 a shading model developed by Khronos.</li>
           </ul>
           <p>
-            See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">BxDF Libraries</a> folder for the MaterialX graph definitions of each of these shading models.
+            See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">BxDF Libraries</a>
+            folder for the MaterialX graph definitions of each of these shading models.
           </p>
           <p>
-            AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>, providing a wide variety of MaterialX examples under a Creative Commons license.  The library is well-organized and searchable, with support for real-time preview, web API integration, and contributions from the community.
+            AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>,
+            providing a wide variety of MaterialX examples under a Creative Commons license.
+            The library is well-organized and searchable, with support for real-time preview, web API integration,
+            and contributions from the community.
+          </p>
+          <p>
+            The <a href="https://physicallybased.info/">Physically Based</a> database is another useful resource,
+            providing downloadable reference materials in the MaterialX format.
           </p>
 
           <h2 id="Discussion"><strong>Discussion Forum</strong></h2>
           <p>
-            The official and best place to discuss MaterialX is on the
-            Academy Software Foundation's <strong>#materialx</strong> channel, at
-            <a href="http://academysoftwarefdn.slack.com/">http://academysoftwarefdn.slack.com/</a>.
-            This venue is appropriate for general questions, feature requests, and discussion of the MaterialX Project
-            as a whole.
-          </p>
-          <p>
-            To get an invite to join this Slack, please go to
-            <strong><a href="https://slack.aswf.io/">https://slack.aswf.io/</a></strong>.
+            The <a href="https://slack.aswf.io/">Academy Software Foundation Slack</a>
+            is the central discussion forum for the MaterialX project, with a dedicated <strong>#materialx</strong>
+            channel that is open to the entire community.
+            This venue is appropriate for general questions, feature requests, and discussion of the MaterialX
+            project as a whole.
           </p>
 
           <h2 id="LogoImages"><strong>MaterialX Logo Images</strong></h2>
