--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             shading and processing nodes with a precise mechanism for functional extensibility.
           </p>
 
-          <p>The MaterialX library, now at release v1.38.5, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
+          <p>The MaterialX library, now at release v1.38.7, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
 
           <br>
           <h2><strong>Announcements</strong></h2>
@@ -283,8 +283,31 @@
             <div>
               <p>
 
+                <em>Update April 21, 2023:</em>
+                <br><strong>MaterialX Library v1.38.7 has been released</strong>.
+                This release adds the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/GraphEditor.md">MaterialX Graph Editor</a>,
+                an example application for visualizing, creating, and editing MaterialX graphs,
+                and support for the Metal Shading Language in shader generation and rendering.
+                Please see the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.7">MaterialX Version 1.38.7 release page</a>
+                on the MaterialX Github for further details,
+                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
+                to download the latest library source code, documentation and examples.
+                <br><br>
+
+                <em>Update November 4, 2022:</em>
+                MaterialX Library v1.38.6 has been released.
+                This release adds Unified Noise and Color Correct nodes,
+                improved iridescence rendering in GLSL,
+                and support for the MaterialX closures in OSL.
+                Please see the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.6">MaterialX Version 1.38.6 release page</a>
+                on the MaterialX Github for further details,
+                <br><br>
+
                 <em>Update July 9, 2022:</em>
-                <br><strong>MaterialX Library v1.38.5 has been released</strong>.
+                MaterialX Library v1.38.5 has been released.
                 This release adds support for Vulkan GLSL generation,
                 improved real-time refraction,
                 the new Open Chess Set example from SideFX.
@@ -292,8 +315,6 @@
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.5">MaterialX Version 1.38.5 release page</a>
                 on the MaterialX Github for further details,
-                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
-                to download the latest library source code, documentation and examples.
                 <br><br>
 
                 <em>Update Apr 6, 2022:</em>
