Update third-party support
- Add section for NVIDIA Omniverse
- Add details for LookdevX in Maya 2024.
- Remove section for Isotropix Clarisse.

--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -154,12 +154,12 @@
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Clarisse">Isotropix Clarisse</a>
+              <a href="ThirdPartySupport.html#Maya">Autodesk Maya</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Maya">Autodesk Maya</a>
+              <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
             </li>
           </ul>
           <ul>
@@ -169,12 +169,12 @@
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
+              <a href="ThirdPartySupport.html#Arnold">Autodesk Arnold</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Arnold">Autodesk Arnold</a>
+              <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
             </li>
           </ul>
         </li>
@@ -254,10 +254,6 @@
             The USD Hydra rendering framework supports MaterialX in HdStorm and HdPrman, using <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/ShaderGeneration.md">ShaderGen</a> to generate GLSL and OSL shaders from MaterialX graphs on demand.
             <br><br>
             Additional details on MaterialX support in USD Hydra may be found in the slides from the MaterialX session at <a href="https://www.materialx.org/assets/ASWF_OSD2021_MaterialX_slides_final.pdf">ASWF Open Source Days 2021</a>.
-            <br><br>
-            USD version <a href="https://github.com/PixarAnimationStudios/USD/blob/release/CHANGELOG.md#2205---2022-04-22">22.05</a> introduced support for texture baking through UsdBakeMaterialX, multi-output MaterialX nodes, and MaterialX namespaces.
-            <br><br>
-            USD version <a href="https://github.com/PixarAnimationStudios/USD/blob/release/CHANGELOG.md#2211---2022-10-21">22.11</a> introduced support for custom MaterialX nodes with local definitions and caching of MaterialX documents in HdStorm.
           </p>
 
           <h2 id="Houdini"><strong>SideFX Houdini</strong></h2>
@@ -269,25 +265,36 @@
             Additional details on MaterialX support in Houdini/Solaris may be found in the slides from the MaterialX session at <a href="https://www.materialx.org/assets/ASWF_OSD2021_MaterialX_slides_final.pdf">ASWF Open Source Days 2021</a>.
           </p>
 
-          <h2 id="Clarisse"><strong>Isotropix Clarisse</strong></h2>
-          <p>
-            Isotropix supports MaterialX in <a href="https://clarissewiki.com/5.5_early_access/angie-materialx.html">Clarisse 5.5</a> and the Angie renderer, which may be accessed by the community in a preview build.
-            <br><br>
-            Additional details on MaterialX support in Clarisse may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
-          </p>
-
           <h2 id="Maya"><strong>Autodesk Maya</strong></h2>
           <p>
             Autodesk supports MaterialX in Maya through the <a href="https://github.com/Autodesk/maya-usd/blob/dev/doc/MaterialX.md">MayaUSD</a> plug-in, building upon the native support for MaterialX in USD.
             <br><br>
+            Maya 2024 introduced a technology preview of <a href="https://help.autodesk.com/view/MAYAUL/2024/ENU/?guid=GUID-5C076445-22FB-4C74-9147-43672BCF88CD">LookdevX</a>, which supports the creation, editing, and rendering of MaterialX graphs.
+            <br><br>
             Additional details on MaterialX support in Maya may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
+          </p>
+
+          <h2 id="Omniverse"><strong>NVIDIA Omniverse</strong></h2>
+          <p>
+            NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/prod_kit/prod_kit/release-notes/104_1_highlights.html#material-x-1-38-support">Omniverse Kit 104.1</a> and beyond, allowing MaterialX documents to be imported and rendered through MDL shader generation.
+            <br><br>
+            Additional details on MaterialX support in Omniverse may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <h2 id="Unreal"><strong>Unreal Engine</strong></h2>
           <p>
-            Epic Games provides early support for MaterialX in <a href="https://docs.unrealengine.com/5.1/en-US/unreal-engine-5.1-release-notes/">Unreal Engine 5.1</a>, allowing the import of MaterialX documents based on the Standard Surface shading model.
+            Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.1/en-US/unreal-engine-5.1-release-notes/">Unreal Engine 5.1</a> and beyond, allowing the import of MaterialX documents based on the Standard Surface shading model.
             <br><br>
             For now, only standalone MaterialX files are supported, but Epic plans to integrate MaterialX import with USD in a future release.
+          </p>
+
+          <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
+          <p>
+            Autodesk provides early support for MaterialX in <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_operators_ac_operators_materialx_html">Arnold 5</a> and beyond, allowing MaterialX documents to be referenced and rendered through a custom MaterialX operator.
+            <br><br>
+            MaterialX content can be exported from Arnold implementations in tools such as <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_for_maya_lookdev_am_Working_With_MaterialX_html">Maya</a> and <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_for_cinema_4d_ci_Utilities_ci_Material_Export_html">Cinema 4D</a>.
+            <br><br>
+            Additional details on MaterialX support in Arnold may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <h2 id="RenderMan"><strong>Pixar RenderMan</strong></h2>
@@ -295,15 +302,6 @@
             Pixar provides early support for MaterialX in RenderMan 24, rendering MaterialX pattern nodes through USD HdPrman, and rendering Physically Based Shading features through a custom implementation of the <a href="https://rmanwiki.pixar.com/display/REN24/MaterialX+Lama">MaterialX Lama</a> nodes.
             <br><br>
             Additional details on MaterialX Lama may be found in this <a href="https://www.youtube.com/playlist?list=PLBozb72i61ywUiXPHA3nUgD9_9_b3phGW">tutorial series</a> from Pixar.
-          </p>
-
-          <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
-          <p>
-            Autodesk provides early support for MaterialX in <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_operators_ac_operators_materialx_html">Arnold 5</a> and newer, allowing MaterialX documents to be referenced and rendered through a custom MaterialX operator.
-            <br><br>
-            MaterialX content can be exported from Arnold implementations in tools such as <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_for_maya_lookdev_am_Working_With_MaterialX_html">Maya</a> and <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_for_cinema_4d_ci_Utilities_ci_Material_Export_html">Cinema 4D</a>.
-            <br><br>
-            Additional details on MaterialX support in Arnold may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <!-- --------------------------------------------------------------------------------- -->
