--- a/Tools.html
+++ b/Tools.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -154,12 +154,12 @@
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Clarisse">Isotropix Clarisse</a>
+              <a href="ThirdPartySupport.html#Maya">Autodesk Maya</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Maya">Autodesk Maya</a>
+              <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
             </li>
           </ul>
           <ul>
@@ -169,12 +169,12 @@
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
+              <a href="ThirdPartySupport.html#Arnold">Autodesk Arnold</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Arnold">Autodesk Arnold</a>
+              <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
             </li>
           </ul>
         </li>
