--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -258,7 +258,7 @@
 
           <h2 id="Houdini"><strong>SideFX Houdini</strong></h2>
           <p>
-            SideFX supports MaterialX in <a href="https://www.sidefx.com/docs/houdini/solaris/materialx.html">Houdini 19</a>, including the authoring and exporting of MaterialX graphs through the Solaris framework, and rendering of MaterialX content in Karma CPU/XPU.
+            SideFX supports MaterialX in <a href="https://www.sidefx.com/docs/houdini/solaris/materialx.html">Houdini 19 and beyond</a>, including the authoring and exporting of MaterialX graphs through the Solaris framework, and rendering of MaterialX content in Karma CPU/XPU.
             <br><br>
             <a href="https://www.sidefx.com/tutorials/karma-a-beautiful-game/">Karma, A Beautiful Game</a> by Moeen Sayed provides a useful tutorial on look development in Houdini/Solaris, including an overview of using MaterialX to construct surface and volume materials.
             <br><br>
@@ -276,21 +276,21 @@
 
           <h2 id="Omniverse"><strong>NVIDIA Omniverse</strong></h2>
           <p>
-            NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/prod_kit/prod_kit/release-notes/104_1_highlights.html#material-x-1-38-support">Omniverse Kit 104.1</a> and beyond, allowing MaterialX documents to be imported and rendered through MDL shader generation.
+            NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/prod_kit/prod_kit/release-notes/104_1_highlights.html#material-x-1-38-support">Omniverse Kit 104.1 and beyond</a>, allowing MaterialX documents to be imported and rendered through MDL shader generation.
             <br><br>
             Additional details on MaterialX support in Omniverse may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <h2 id="Unreal"><strong>Unreal Engine</strong></h2>
           <p>
-            Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.1/en-US/unreal-engine-5.1-release-notes/">Unreal Engine 5.1</a> and beyond, allowing the import of MaterialX documents based on the Standard Surface shading model.
+            Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.1/en-US/unreal-engine-5.1-release-notes/">Unreal Engine 5.1 and beyond</a>, allowing the import of MaterialX documents based on the Standard Surface shading model.
             <br><br>
             For now, only standalone MaterialX files are supported, but Epic plans to integrate MaterialX import with USD in a future release.
           </p>
 
           <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
           <p>
-            Autodesk provides early support for MaterialX in <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_operators_ac_operators_materialx_html">Arnold 5</a> and beyond, allowing MaterialX documents to be referenced and rendered through a custom MaterialX operator.
+            Autodesk supports MaterialX in <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_operators_ac_operators_materialx_html">Arnold 5 and beyond</a>, allowing MaterialX documents to be referenced and rendered through a custom MaterialX operator.
             <br><br>
             MaterialX content can be exported from Arnold implementations in tools such as <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_for_maya_lookdev_am_Working_With_MaterialX_html">Maya</a> and <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_for_cinema_4d_ci_Utilities_ci_Material_Export_html">Cinema 4D</a>.
             <br><br>
@@ -299,7 +299,7 @@
 
           <h2 id="RenderMan"><strong>Pixar RenderMan</strong></h2>
           <p>
-            Pixar provides early support for MaterialX in RenderMan 24, rendering MaterialX pattern nodes through USD HdPrman, and rendering Physically Based Shading features through a custom implementation of the <a href="https://rmanwiki.pixar.com/display/REN24/MaterialX+Lama">MaterialX Lama</a> nodes.
+            Pixar supports MaterialX in <a href="https://rmanwiki.pixar.com/display/REN25/MaterialX">RenderMan 24 and beyond</a>, rendering MaterialX pattern nodes through USD HdPrman, and rendering Physically Based Shading features through a custom implementation of the <a href="https://rmanwiki.pixar.com/display/REN25/MaterialX+Lama">MaterialX Lama</a> nodes.
             <br><br>
             Additional details on MaterialX Lama may be found in this <a href="https://www.youtube.com/playlist?list=PLBozb72i61ywUiXPHA3nUgD9_9_b3phGW">tutorial series</a> from Pixar.
           </p>
