Clarify UE5 support
This changelist clarifies the supported set of MaterialX data types and nodes in UE5.

--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -285,7 +285,7 @@
           <p>
             Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.1/en-US/unreal-engine-5.1-release-notes/">Unreal Engine 5.1 and beyond</a>, allowing the import of MaterialX documents based on the Standard Surface shading model.
             <br><br>
-            For now, only standalone MaterialX files are supported, but Epic plans to integrate MaterialX import with USD in a future release.
+            For now, only a subset of the MaterialX standard data types and nodes is supported, and Epic plans to extend this supported set in future releases.
           </p>
 
           <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
