--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -159,6 +159,11 @@
           </ul>
           <ul>
             <li>
+              <a href="ThirdPartySupport.html#Apple">Apple VisionOS</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
               <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
             </li>
           </ul>
@@ -272,6 +277,13 @@
             Maya 2024 introduced a technology preview of <a href="https://help.autodesk.com/view/MAYAUL/2024/ENU/?guid=GUID-5C076445-22FB-4C74-9147-43672BCF88CD">LookdevX</a>, which supports the creation, editing, and rendering of MaterialX graphs.
             <br><br>
             Additional details on MaterialX support in Maya may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
+          </p>
+
+          <h2 id="Apple"><strong>Apple VisionOS</strong></h2>
+          <p>
+            Apple has adopted MaterialX as the material representation for its upcoming <a href="https://developer.apple.com/visionos/">VisionOS</a> platform, including a pathway for translating <a href="https://developer.apple.com/videos/play/wwdc2023/10088//">Unity Shader Graph</a> content to MaterialX.
+            <br><br>
+            Additional details on MaterialX in Apple VisionOS may be found in the video presentations for <a href="https://developer.apple.com/videos/play/wwdc2023/10086">WWDC 2023</a>.
           </p>
 
           <h2 id="Omniverse"><strong>NVIDIA Omniverse</strong></h2>
