--- a/Tools.html
+++ b/Tools.html
@@ -159,6 +159,11 @@
           </ul>
           <ul>
             <li>
+              <a href="ThirdPartySupport.html#Apple">Apple VisionOS</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
               <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
             </li>
           </ul>
