Improvements to tools documentation
This changelist improves the documentation of MaterialX tools, revising existing sections and adding details on the Graph Editor and Web Viewer.

--- a/Contributing.html
+++ b/Contributing.html
@@ -137,6 +137,16 @@
               <a href="Tools.html#Viewer">MaterialX Viewer</a>
             </li>
           </ul>
+          <ul>
+            <li>
+              <a href="Tools.html#GraphEditor">MaterialX Graph Editor</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Tools.html#WebViewer">MaterialX Web Viewer</a>
+            </li>
+          </ul>
         </li>
       </ul>
       <ul>
