--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -179,12 +179,12 @@
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
+              <a href="ThirdPartySupport.html#Unreal">Unreal Engine</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Unreal">Unreal Engine</a>
+              <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
             </li>
           </ul>
           <ul>
@@ -195,6 +195,11 @@
           <ul>
             <li>
               <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#V-Ray">Chaos V-Ray</a>
             </li>
           </ul>
         </li>
@@ -308,20 +313,20 @@
             Additional details on MaterialX in Apple VisionOS may be found in the video presentations for <a href="https://developer.apple.com/videos/play/wwdc2023/10086">WWDC 2023</a>.
           </p>
 
+          <h2 id="Unreal"><strong>Unreal Engine</strong></h2>
+          <p>
+            Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.3/en-US/interchange-materialx-reference-in-unreal-engine/">Unreal Engine 5.1 and beyond</a>, allowing the import of MaterialX documents based on the Standard Surface shading model.
+            <br><br>
+            As of <a href="https://docs.unrealengine.com/5.3/en-US/unreal-engine-5.3-release-notes/">Unreal Engine 5.3</a>, MaterialX content may additionally be referenced in USD workflows within Unreal.
+            <br><br>
+            For now, only a subset of the MaterialX standard data types and nodes is supported, and Epic plans to extend this supported set in future releases.
+          </p>
+
           <h2 id="Omniverse"><strong>NVIDIA Omniverse</strong></h2>
           <p>
             NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/prod_kit/prod_kit/release-notes/104_1_highlights.html#material-x-1-38-support">Omniverse Kit 104.1 and beyond</a>, allowing MaterialX documents to be imported and rendered through MDL shader generation.
             <br><br>
             Additional details on MaterialX support in Omniverse may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
-          </p>
-
-          <h2 id="Unreal"><strong>Unreal Engine</strong></h2>
-          <p>
-            Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.1/en-US/unreal-engine-5.1-release-notes/">Unreal Engine 5.1 and beyond</a>, allowing the import of MaterialX documents based on the Standard Surface shading model.
-            <br><br>
-            As of <a href="https://docs.unrealengine.com/5.3/en-US/unreal-engine-5.3-release-notes/">Unreal Engine 5.3</a>, MaterialX content may additionally be referenced in USD workflows within Unreal.
-            <br><br>
-            For now, only a subset of the MaterialX standard data types and nodes is supported, and Epic plans to extend this supported set in future releases.
           </p>
 
           <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
@@ -338,6 +343,13 @@
             Pixar supports MaterialX in <a href="https://rmanwiki.pixar.com/display/REN25/MaterialX">RenderMan 24 and beyond</a>, rendering MaterialX pattern nodes through USD HdPrman, and rendering Physically Based Shading features through a custom implementation of the <a href="https://rmanwiki.pixar.com/display/REN25/MaterialX+Lama">MaterialX Lama</a> nodes.
             <br><br>
             Additional details on MaterialX Lama may be found in this <a href="https://www.youtube.com/playlist?list=PLBozb72i61ywUiXPHA3nUgD9_9_b3phGW">tutorial series</a> from Pixar.
+          </p>
+
+          <h2 id="V-Ray"><strong>Chaos V-Ray</strong></h2>
+          <p>
+            Chaos Group supports MaterialX in <a href="https://docs.chaos.com/display/VRAYHOUDINI/MaterialX+Support">V-Ray 6 and beyond</a>, rendering MaterialX pattern nodes through VRayScene-USD.
+            <br><br>
+            Additional details on MaterialX support in V-Ray may be found in the <a href="https://www.youtube.com/watch?v=iHWOBcyxyPE">ChaosTV</a> video series.
           </p>
 
           <!-- --------------------------------------------------------------------------------- -->
