--- a/Tools.html
+++ b/Tools.html
@@ -179,12 +179,12 @@
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
+              <a href="ThirdPartySupport.html#Unreal">Unreal Engine</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Unreal">Unreal Engine</a>
+              <a href="ThirdPartySupport.html#Omniverse">NVIDIA Omniverse</a>
             </li>
           </ul>
           <ul>
@@ -195,6 +195,11 @@
           <ul>
             <li>
               <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#V-Ray">Chaos V-Ray</a>
             </li>
           </ul>
         </li>
