Update third-party support
- Add a section for MaterialX support in Autodesk VRED.
- Update details for MaterialX support in Maya 2025 and 3ds Max 2025.
- Add a link to an OpenUSD/MaterialX/OpenPBR post on the NVIDIA developer site.

--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -174,6 +174,11 @@
           </ul>
           <ul>
             <li>
+              <a href="ThirdPartySupport.html#VRED">Autodesk VRED</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
               <a href="ThirdPartySupport.html#Apple">Apple VisionOS</a>
             </li>
           </ul>
@@ -292,18 +297,21 @@
 
           <h2 id="Maya"><strong>Autodesk Maya</strong></h2>
           <p>
-            Autodesk supports MaterialX in Maya through the <a href="https://github.com/Autodesk/maya-usd/blob/dev/doc/MaterialX.md">MayaUSD</a> plug-in, building upon the native support for MaterialX in USD.
-            <br><br>
-            Maya 2024 introduced a technology preview of <a href="https://help.autodesk.com/view/MAYAUL/2024/ENU/?guid=GUID-5C076445-22FB-4C74-9147-43672BCF88CD">LookdevX</a>, which supports the creation, editing, and rendering of MaterialX graphs.
+            Autodesk supports MaterialX in Maya 2024 and beyond through the <a href="https://help.autodesk.com/view/MAYAUL/2025/ENU/?guid=GUID-BCF8E14C-6347-4CF8-9CD4-FA3E6CAFD8BA">LookdevX</a> framework, enabling the creation, editing, and rendering of MaterialX graphs.
             <br><br>
             Additional details on LookdevX in Maya may be found in the slides from the MaterialX Virtual Town Hall at <a href="https://materialx.org/assets/ASWF_OSD2023_MaterialX_Final.pdf">ASWF Open Source Days 2023</a>.
           </p>
 
           <h2 id="Max"><strong>Autodesk 3ds Max</strong></h2>
           <p>
-            Autodesk supports MaterialX in 3ds Max 2024 through a bundled <a href="https://help.autodesk.com/view/3DSMAX/2024/ENU/?guid=GUID-CC8C2874-1F7C-45A3-B21A-6F8FE85516D5">MaterialX</a> plug-in, enabling the authoring, import, and export of MaterialX content.
+            Autodesk supports MaterialX in 3ds Max 2024 and beyond through a bundled <a href="https://help.autodesk.com/view/3DSMAX/2025/CHS/?guid=GUID-CC8C2874-1F7C-45A3-B21A-6F8FE85516D5">MaterialX</a> plug-in, enabling the authoring, import, and export of MaterialX content.
             <br><br>
             The MaterialX and USD plug-ins in 3ds Max are integrated, allowing USD content to reference MaterialX documents in a combined USD/MaterialX workflow.
+          </p>
+
+          <h2 id="VRED"><strong>Autodesk VRED</strong></h2>
+          <p>
+            Autodesk supports import of MaterialX documents in <a href="https://help.autodesk.com/view/VREDPRODUCTS/2024/ENU/?guid=VRED_Truelight_Materials_MaterialX">VRED 2024 and beyond</a>, providing access to external libraries of MaterialX content in the application.
           </p>
 
           <h2 id="Apple"><strong>Apple VisionOS</strong></h2>
@@ -326,7 +334,7 @@
           <p>
             NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/prod_kit/prod_kit/release-notes/104_1_highlights.html#material-x-1-38-support">Omniverse Kit 104.1 and beyond</a>, allowing MaterialX documents to be imported and rendered through MDL shader generation.
             <br><br>
-            Additional details on MaterialX support in Omniverse may be found in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
+            Additional details on the roadmap for MaterialX in Omniverse may be found on the <a href="https://developer.nvidia.com/blog/unlock-seamless-material-interchange-for-virtual-worlds-with-openusd-materialx-and-openpbr/">NVIDIA developer site</a> and in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
           </p>
 
           <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
