--- a/DeveloperReference.html
+++ b/DeveloperReference.html
@@ -174,6 +174,11 @@
           </ul>
           <ul>
             <li>
+              <a href="ThirdPartySupport.html#VRED">Autodesk VRED</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
               <a href="ThirdPartySupport.html#Apple">Apple VisionOS</a>
             </li>
           </ul>
