Update specification link
This changelist updates a link to the specification for the Physically Based Shading Nodes on the Tools page.

--- a/Tools.html
+++ b/Tools.html
@@ -272,7 +272,7 @@
             <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/ShaderGeneration.md">ShaderGen</a>
             is a dynamic shader generation system that can build and compile complete GLSL, OSL, MDL, and MSL shaders from MaterialX nodegraphs.
             A key component of ShaderGen is a set of
-            <a href="assets/MaterialX.v1.38.PBRSpec.pdf">Physically Based Shading nodes</a>,
+            <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/Specification/MaterialX.PBRSpec.md">Physically Based Shading nodes</a>,
             which can be used in conjunction with the standard pattern nodes to create complex layered energy-conserving surface,
             volume and emissive shaders for offline or real-time rendering.
           </p>
